mise en place de la second navbar

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <title>Smart - Soft</title>
+  <title>Toudeal</title>
   <!--
     manifest.json provides metadata used when your web app is added to the
     homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -27,8 +27,6 @@
   <link href="%PUBLIC_URL%/assets/css/core.css" rel="stylesheet" type="text/css">
   <link href="%PUBLIC_URL%/assets/css/components.css" rel="stylesheet" type="text/css">
   <link href="%PUBLIC_URL%/assets/css/colors.css" rel="stylesheet" type="text/css">
-  <!-- /global stylesheets -->
-  <title>React App</title>
 </head>
     <body>
         <noscript></noscript>
