mise en place des components slide et carousel

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,10 @@
         <script type="text/javascript" src="%PUBLIC_URL%/assets/js/plugins/forms/styling/switchery.min.js"></script>
         <script type="text/javascript" src="%PUBLIC_URL%/assets/js/plugins/forms/styling/uniform.min.js"></script>
         <script type="text/javascript" src="%PUBLIC_URL%/assets/js/plugins/forms/selects/bootstrap_multiselect.js"></script>
+        <script type="text/javascript" src="%PUBLIC_URL%/assets/js/plugins/forms/selects/bootstrap_select.min.js"></script>
         <script type="text/javascript" src="%PUBLIC_URL%/assets/js/plugins/ui/moment/moment.min.js"></script>
         <script type="text/javascript" src="%PUBLIC_URL%/assets/js/plugins/pickers/daterangepicker.js"></script>
+        <script type="text/javascript" src="%PUBLIC_URL%/assets/js/pages/form_bootstrap_select.js"></script>
         <script type="text/javascript" src="%PUBLIC_URL%/assets/js/backstretch/jquery.backstretch.min.js"></script>
         <script type="text/javascript" src="%PUBLIC_URL%/assets/js/login.js"></script>
 
